fix: border and spacing enhancement

--- a/src/components/reusable/fileUploader/fileUploader.scss
+++ b/src/components/reusable/fileUploader/fileUploader.scss
@@ -92,7 +92,12 @@
   .file-info-container {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 16px;
+
+    &.border-and-padding {
+      border-top: 1px solid var(--kd-color-border-accent-secondary);
+      padding-top: 16px;
+    }
   }
 
   .error-filled-icon {
@@ -150,9 +155,8 @@
   }
 
   .file-uploader-item-container {
-    height: 74px;
-    padding: 16px 16px 16px 0;
-    border-bottom: 1px solid var(--kd-color-border-accent-secondary);
+    height: 64px;
+    padding: 8px 16px 8px 0;
     display: flex;
     flex-wrap: wrap;
   }
