--- a/src/components/reusable/fileUploader/fileUploaderListContainer.scss
+++ b/src/components/reusable/fileUploader/fileUploaderListContainer.scss
@@ -8,6 +8,7 @@
 .file-uploader-list-container {
   display: flex;
   flex-direction: column;
+  border-bottom: 1px solid var(--kd-color-border-accent-secondary);
 }
 
 .file-uploader-list-container__header {
@@ -16,21 +17,22 @@
   align-items: center;
   @include typography.type-body-02;
   height: 32px;
+  margin-bottom: 8px;
 }
 
 .file-uploader-list-container__items {
-  max-height: 222px; // 74px * 3
+  max-height: 192px; // 64px * 3
   overflow-y: auto;
   overflow-x: hidden;
 }
 
 .shadow-bottom {
   box-shadow: inset 0px -8px 6px -6px
-    var(--kd-color-utility-elevation-default-l2---overflow);
+    var(--kd-color-utility-elevation-default-1);
 }
 
 .shadow-top {
-  box-shadow: inset 0px 8px 6px -6px var(--kd-color-utility-elevation-default-l2---overflow);
+  box-shadow: inset 0px 8px 6px -6px var(--kd-color-utility-elevation-default-1);
 }
 
 // .file-uploader-list-container__footer {
